--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title><%= full_title yield :title %></title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<title><%= full_title yield :title %></title>
+<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<%= csrf_meta_tags %>
+<!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 
-<%= yield %>
+<header class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <%= link_to 'sample app', '#', id: 'logo', class: 'navbar-brand' %>
+    </div>
+    <nav class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'Home', '#' %></li>
+        <li><%= link_to 'Help', '#' %></li>
+        <li><%= link_to 'Sign in', '#' %></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
-</body>
-</html>
+<div class="container">
+  <%= yield %>
+</div>
