--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,8 @@
     </div>
     <nav class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><%= link_to 'Home', '#' %></li>
-        <li><%= link_to 'Help', '#' %></li>
+        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'Help', help_path %></li>
         <li><%= link_to 'Sign in', '#' %></li>
       </ul>
     </nav>
